source: code cleanup - refactor code - move builtin converter to enum